# mqtt-app

./: LICENSE  Makefile  README.md  mprocs.log.yaml  mprocs.yaml
.github/workflows/: ci.yml  mqtt-auth-server-ci.yml
agent/: .gitignore  .rustfmt  Cargo.toml  config.yml  ctrl_config.yml  mproxy.yml  mpublish.yml
agent/examples/: publish_command.rs
agent/src/: config.rs  connection.rs  handler.rs  lib.rs  main.rs  message.rs
authServer/: Cargo.toml  Dockerfile
authServer/src/: main.rs
develop/: run_mqtt.sh
develop/rmqtt/: rmqtt.toml
logViewer/: .env.example  .eslintrc.cjs  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
logViewer/src/: auth.tsx  constants.ts  index.css  main.tsx  mqtt.ts  routeTree.gen.ts
logViewer/src/components/simpleLog/: index.tsx
logViewer/src/components/virtualLog/: index.tsx  line.tsx  searchBar.tsx
logViewer/src/lib/: utils.ts
logViewer/src/routes/: __root.tsx  login.tsx  test.tsx
logViewer/src/routes/_auth/: index.tsx
logViewer/src/store/: index.ts  topicStore.ts
logViewer/src/test/: LogMockTest.tsx
logViewer/test/: mqtt_client.test.ts
shell/: mproxy.service
shell/dev/rmqtt/: run_mqtt.sh
shell/dev/rmqtt/plugin/: rmqtt-acl.toml
shell/prod/: README.md  rmqtt.toml
shell/prod/plugin/: rmqtt-http-api.toml
shell/prod/rmqtt/: rmqtt.toml  run_prod_mqtt.sh
shell/rmqtt/: rmqtt.toml
web/: package-lock.json  package.json  vite.config.ts
web/src/: auth.tsx  constants.ts  main.tsx  routeTree.gen.ts
web/src/routes/: __root.tsx  index.tsx  login.tsx
(+9 files in other folders)
