[package]
name = "mqtt-util-auth-server"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]

salvo = { version = "0.64", features = ["affix"] }
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
